// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DealList with empty message 1`] = `
<div
  className="container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Deals
    </div>
    <div
      className="show-for-desktop"
    >
      Deal
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No deals
      </span>
    </div>
  </div>
</div>
`;

exports[`should render DealList with deals 1`] = `
<div
  className="container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Deals
    </div>
    <div
      className="show-for-desktop"
    >
      Deal
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <DealListItem
      amount={195}
      createdAt={0}
      oggettoId="Gum"
      id="1"
      key="1"
      note=""
    />
    <DealListItem
      amount={109500}
      createdAt={-345600000}
      oggettoId="Rent"
      id="2"
      key="2"
      note=""
    />
    <DealListItem
      amount={4500}
      createdAt={345600000}
      oggettoId="Credit Card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
